--- a/jupyter/craig/barplots/barplots.ipynb
+++ b/jupyter/craig/barplots/barplots.ipynb
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is an example of how to change the size of the plot by adding the *figsize* paramter to *bar()*.  The units of the width and height values are in inches (10 inches wide and 3 inches high), although the plot will be scaled to the width of the cell if it is too large to fit.  Also notice a variant method of how a title can be added to the plot."
+    "Here is an example of how to change the size of the plot by adding the *figsize* parameter to *bar()*.  The units of the width and height values are in inches (10 inches wide and 3 inches high), although the plot will be scaled to the width of the cell if it is too large to fit.  Also notice a variant method of how a title can be added to the plot."
    ]
   },
   {
@@ -633,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This section demonstrates how to group works by mode into major and minor key groups.  In the previous sections, pitches were processed by scale degress, but in this section they are processed by pitch classes in terms of semitones relative to the tonic (first) note of the key.  For example the tonic is assigned to be 0, the second scale degree is 2, since it is two semitones above the tonic pitch; the 5th scale degree is assigned 7, and so on."
+    "This section demonstrates how to group works by mode into major and minor key groups.  In the previous sections, pitches were processed by scale degrees, but in this section they are processed by pitch classes in terms of semitones relative to the tonic (first) note of the key.  For example the tonic is assigned to be 0, the second scale degree is 2, since it is two semitones above the tonic pitch; the 5th scale degree is assigned 7, and so on."
    ]
   },
   {
@@ -972,7 +972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nomalize the difference between major and minor notecounts:"
+    "Normalize the difference between major and minor notecounts:"
    ]
   },
   {
@@ -1015,7 +1015,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The largest difference is that major keys use the 4th semitone above tonic (major 3rd), while the minor keys use the 3rd semitone above the tonie (minor 3rd). Also semitones 8 and 10 are mostly used by minor keys, while 9 and 10 are used by major keys.  For major keys, there is more 6, probably functioning as a leading tone to a tonicization of the dominant (7).  Minor key chorales also use a little more of the subdominant scale-degree (5)."
+    "The largest difference is that major keys use the 4th semitone above tonic (major 3rd), while the minor keys use the 3rd semitone above the tonic (minor 3rd). Also semitones 8 and 10 are mostly used by minor keys, while 9 and 10 are used by major keys.  For major keys, there is more 6, probably functioning as a leading tone to a tonicization of the dominant (7).  Minor key chorales also use a little more of the subdominant scale-degree (5)."
    ]
   },
   {
@@ -1029,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Bach choral sets has music in other modes besides major and minor.  For the above analyses, modes such as dorian are assigned to the minor category, and mixolydian chorales are assigned to the major category. However, the Bach chorale data set contains mode indiations for non-major/-minor modes, such as dorian, phrygian and mixolydian.  For example the indication for D dorian is \"`*d:dor` and C mixolydian is \"`*C:mix`.  The letter of the pitch name depends on the third scale degree of the mode: a minor third will use a lower-cases tonic letter, since it is more similar to minor keys and to major ones.  But in the following calles to `egrep` the `-i` option is used to ignore the letter cases.\n",
+    "The Bach choral sets has music in other modes besides major and minor.  For the above analyses, modes such as dorian are assigned to the minor category, and mixolydian chorales are assigned to the major category. However, the Bach chorale data set contains mode indications for non-major/-minor modes, such as dorian, phrygian and mixolydian.  For example the indication for D dorian is \"`*d:dor` and C mixolydian is \"`*C:mix`.  The letter of the pitch name depends on the third scale degree of the mode: a minor third will use a lower-cases tonic letter, since it is more similar to minor keys and to major ones.  But in the following calls to `egrep` the `-i` option is used to ignore the letter cases.\n",
     "\n",
     "Here are the counts of chorales in non-major/-minor modes:"
    ]
